changed model settings to test, changed server sync settings

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -54,7 +54,7 @@
                             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,14}$" />
                         <!--personal phone-->
                         <label class="form-label form-inline" for="personal_phone">Personal Phone Number:</label>
-                        <input class="form-input" type="tel" id="personal_phone" name="personal_phone" />
+                        <input class="form-input" type="number" id="personal_phone" name="personal_phone" />
                         <!--address 1--> <!--address 2-->
                         <label class="form-label form-inline" for="address1">Home Address:</label>
                         <input class="form-input" type="text" id="address1" name="address1"
@@ -219,7 +219,7 @@
                         <input class="form-input" type="text" id="title" name="title" />
                         <!--work phone-->
                         <label class="form-label form-inline" for="work_phone">Work Phone Number:</label>
-                        <input class="form-input" type="tel" id="work_phone" name="work_phone" />
+                        <input class="form-input" type="number" id="work_phone" name="work_phone" />
                         <!--work phone ext-->
                         <label class="form-label form-inline" for="work_phoneext">Work Phone
                             Extension:</label>
