ERROR: Refused to execute script from 'http://localhost:3001/public/js/checkbox.js' because its MIME type ('text/html') is not executable, and strict MIME type checking is enabled.

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -162,7 +162,7 @@
                             <i class="form-icon"></i> Prefer to Not Identify
                         </label>
                         <!--ethnicity-->
-                        <p class="exampletext">Ethnicity (Please select all that apply, and at least one from the list.):</p>
+                        <p class="exampletext">Ethnicity (Please select all that apply, or at least one from the list.):</p>
                         <label class="form-checkbox">
                             <input type="checkbox" id="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> American Indian and Alaska Native
