changed id to class for input radios and check boxes

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -23,6 +23,7 @@
                             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,14}$" required/>
                         <!--password-->
                         <label class="form-label form-inline" for="password">Password:</label>
+                        <p class="exampletext text-small">Please have at least one uppercase letter, lowercase letter and number.</p>
                         <input class="form-input" type="password" id="password" name="password"
                             pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{8,}$" required/>
                     </div> <!--CARD BODY END-->
@@ -96,99 +97,99 @@
                         <!--sex allow null-->
                         <p class="exampletext">Gender Identity (Not Required):</p>
                         <label class="form-radio">
-                            <input type="radio" id="sex" name="sex">
+                            <input type="radio" class="sex" name="sex">
                             <i class="form-icon"></i> Female
                         </label>
                         <label class="form-radio">
-                            <input type="radio" id="sex" name="sex">
+                            <input type="radio" class="sex" name="sex">
                             <i class="form-icon"></i> Male
                         </label>
                         <label class="form-radio">
-                            <input type="radio" id="sex" name="sex">
+                            <input type="radio" class="sex" name="sex">
                             <i class="form-icon"></i> Non-Binary
                         </label>
                         <label class="form-radio">
-                            <input type="radio" id="sex" name="sex">
+                            <input type="radio" class="sex" name="sex">
                             <i class="form-icon"></i> Transgender-Female
                         </label>
                         <label class="form-radio">
-                            <input type="radio" id="sex" name="sex">
+                            <input type="radio" class="sex" name="sex">
                             <i class="form-icon"></i> Transgender-Male
                         </label>
                         <label class="form-radio">
-                            <input type="radio" id="sex" name="sex">
+                            <input type="radio" class="sex" name="sex">
                             <i class="form-icon"></i> Transgender-Non-Binary
                         </label>
                         <label class="form-radio">
-                            <input type="radio" id="sex" name="sex">
+                            <input type="radio" class="sex" name="sex">
                             <i class="form-icon"></i> Other
                         </label>
                         <label class="form-radio">
-                            <input type="radio" id="sex" name="sex">
+                            <input type="radio" class="sex" name="sex">
                             <i class="form-icon"></i> Prefer to Not Identify
                         </label>
                         <!--sexual_orientation allow null-->
                         <p class="exampletext">Sexual Orientation (Not Required):</p>
                         <label class="form-radio">
-                            <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                            <input type="radio" class="sexual_orientation" name="sexual_orientation">
                             <i class="form-icon"></i> Asexual
                         </label>
                         <label class="form-radio">
-                            <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                            <input type="radio" class="sexual_orientation" name="sexual_orientation">
                             <i class="form-icon"></i> Bisexual
                         </label>
                         <label class="form-radio">
-                            <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                            <input type="radio" class="sexual_orientation" name="sexual_orientation">
                             <i class="form-icon"></i> Gay
                         </label>
                         <label class="form-radio">
-                            <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                            <input type="radio" class="sexual_orientation" name="sexual_orientation">
                             <i class="form-icon"></i> Heterosexual
                         </label>
                         <label class="form-radio">
-                            <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                            <input type="radio" class="sexual_orientation" name="sexual_orientation">
                             <i class="form-icon"></i> Lesbian
                         </label>
                         <label class="form-radio">
-                            <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                            <input type="radio" class="sexual_orientation" name="sexual_orientation">
                             <i class="form-icon"></i> Pansexual
                         </label>
                         <label class="form-radio">
-                            <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                            <input type="radio" class="sexual_orientation" name="sexual_orientation">
                             <i class="form-icon"></i> Other
                         </label>
                         <label class="form-radio">
-                            <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                            <input type="radio" class="sexual_orientation" name="sexual_orientation">
                             <i class="form-icon"></i> Prefer to Not Identify
                         </label>
                         <!--ethnicity-->
                         <p class="exampletext">Ethnicity (Please select all that apply, or at least one from the list.):</p>
                         <label class="form-checkbox">
-                            <input type="checkbox" id="ethnicity" name="ethnicity" required>
+                            <input type="checkbox" class="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> American Indian and Alaska Native
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" id="ethnicity" name="ethnicity" required>
+                            <input type="checkbox" class="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> Asian
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" id="ethnicity" name="ethnicity" required>
+                            <input type="checkbox" class="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> Black or African American
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" id="ethnicity" name="ethnicity" required>
+                            <input type="checkbox" class="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> Hispanic
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" id="ethnicity" name="ethnicity" required>
+                            <input type="checkbox" class="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> Native Hawaiian and Other Pacific Islander
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" id="ethnicity" name="ethnicity" required>
+                            <input type="checkbox" class="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> White or Caucasian
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" id="ethnicity" name="ethnicity" required>
+                            <input type="checkbox" class="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> Some Other Race
                         </label>
                     </div> <!--CARD BODY END-->
@@ -227,11 +228,11 @@
                             placeholder="0000" />
                         <!--base rate-->
                         <label class="form-label form-inline" for="base_rate">Base Rate: </label>
-                        <p class="exampletext">Example: Write "23" instead of "$23/hour"</p>
+                        <p class="exampletext text-small">Example: Write "23" instead of "$23/hour"</p>
                         <input class="form-input" type="number" id="base_rate" name="base_rate" required/>
                         <!--annual salary-->
                         <label class="form-label form-inline" for="annual_salary">Annual Salary: </label>
-                        <p class="exampletext">Example: Write "40000" instead of "$40,000/year"</p>
+                        <p class="exampletext text-small">Example: Write "40000" instead of "$40,000/year"</p>
                         <input class="form-input" type="number" id="annual_salary" name="annual_salary" required/>
                     </div> <!--CARD BODY END-->
                 </div> <!--ACCORDION BODY END-->
