re-wrote checkbox.js: alert if nothing checked. removed required attr from the DOM for each ethnicity

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 {{> nav}}
 <div class="dashboard-content">
-<div class="h2">
+<div class="h2 text-center">
     {{#if first_name}}
 Welcome, {{first_name}} {{last_name}}
 {{/if}}
