--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -43,6 +43,12 @@
   margin: 0;
 }
 
+/* USE THIS TO ADD MARGINS WITH OUT APPLYING TO HEADER */
+.add-margin{
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 /* CARDS */
 .card {
   box-shadow: 0 0.25rem 1rem rgba(48,55,66,.15)
@@ -94,8 +100,12 @@ button.submit {
   background-color: var(--mustard);
   border: var(--mustard);
 }
-p.exampletext {
+p.labeltext {
   margin-top: .5rem;
+  margin-bottom: .5rem !important;
+  color: var(--gray);
+}
+p.exampletext {
   margin-bottom: .5rem !important;
   color: var(--gray);
 }
