new error thrown for email validation. unsire if onclick='valThis' is working

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -20,7 +20,7 @@
                         <!--email-->
                         <label class="form-label form-inline" for="email">Login Email for Your Account:</label>
                         <input class="form-input" type="email" id="email" name="email"
-                            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,14}$" required />
+                            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required />
                         <!--password-->
                         <label class="form-label form-inline" for="password">Password:</label>
                         <p class="exampletext text-small">Please have at least one uppercase letter, lowercase letter
@@ -170,27 +170,27 @@
                         <p class="labeltext">Ethnicity (Please select all that apply, or at least one from the list.):
                         </p>
                         <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity">
+                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="valThis()">
                             <i class="form-icon"></i> American Indian and Alaska Native
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity">
+                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="valThis()">
                             <i class="form-icon"></i> Asian
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity">
+                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="valThis()">
                             <i class="form-icon"></i> Black or African American
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity">
+                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="valThis()">
                             <i class="form-icon"></i> Hispanic
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity">
+                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="valThis()">
                             <i class="form-icon"></i> Native Hawaiian and Other Pacific Islander
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity">
+                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="valThis()">
                             <i class="form-icon"></i> White or Caucasian
                         </label>
                         <label class="form-checkbox">
