new errors! it's starting to workgit add .

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -170,31 +170,31 @@
                         <p class="labeltext">Ethnicity (Please select all that apply, or at least one from the list.):
                         </p>
                         <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="valThis()">
+                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> American Indian and Alaska Native
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="valThis()">
+                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> Asian
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="valThis()">
+                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> Black or African American
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="valThis()">
+                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> Hispanic
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="valThis()">
+                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> Native Hawaiian and Other Pacific Islander
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="valThis()">
+                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> White or Caucasian
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity">
+                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> Some Other Race
                         </label>
                     </div> <!--CARD BODY END-->
