final push of the night

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,36 +1,36 @@
 {{> nav}}
 <div class="dashboard-content">
-<div class="h2">
-    {{#if first_name}}
-Welcome, {{first_name}} {{last_name}}
-{{/if}}
-</div>
-<div class="divider"></div>
+    <div class="h2 text-center">
+        {{#if first_name}}
+            Welcome, {{first_name}} {{last_name}}
+        {{/if}}
+    </div>
+    <div class="divider"></div>
 
-<main class="dashboard-content columns mx-1">
-{{!-- DASHBOARD CARDS --}}
-{{!-- DUES --}}
-{{!-- {{#if dues}} --}}
-<div class="column col-6 col-xs-12">
-{{> dashboard/dues}}
-{{!-- {{/if}} --}}
-</div>
+    <main class="dashboard-content columns mx-1">
+        {{!-- DASHBOARD CARDS --}}
+        {{!-- DUES --}}
+        {{!-- {{#if dues}} --}}
+        <div class="column col-6 col-xs-12">
+            {{> dashboard/dues}}
+            {{!-- {{/if}} --}}
+        </div>
 
-{{!-- UNION REPRESENTATIVE --}}
-{{!-- {{#if hasRepresentative}} --}}
-<div class="column col-6 col-xs-12">
-{{> dashboard/myrep}}
-</div>
-{{!-- {{/if}} --}}
+        {{!-- UNION REPRESENTATIVE --}}
+        {{!-- {{#if hasRepresentative}} --}}
+        <div class="column col-6 col-xs-12">
+            {{> dashboard/myrep}}
+        </div>
+        {{!-- {{/if}} --}}
 
-{{!-- CALENDAR --}}
-<div class="column col-6 col-xs-12">
-{{> dashboard/calendar}}
-</div>
+        {{!-- CALENDAR --}}
+        <div class="column col-6 col-xs-12">
+            {{> dashboard/calendar}}
+        </div>
 
-<div class="column col-6 col-xs-12">
-{{> dashboard/messages}}
-</div>
+        <div class="column col-6 col-xs-12">
+            {{> dashboard/messages}}
+        </div>
 
-</main> 
+    </main>
 </div>
