added Middle Eastern or North African as an Option

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -60,7 +60,7 @@
 
                         <label class="form-label form-inline" for="personal_phone">Preferred Contact Phone
                             Number:</label>
-                        <input class="form-input" type="tel" id="personal_phone" name="personal_phone" required />
+                        <input class="form-input" type="number" id="personal_phone" name="personal_phone" required />
                         <!--address 1 allow null--> <!--address 2 allow null-->
                         <label class="form-label form-inline" for="address1">Home Address (Not Required):</label>
 
@@ -189,6 +189,10 @@
                         </label>
                         <label class="form-checkbox">
                             <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
+                            <i class="form-icon"></i> Middle Eastern or North African
+                        </label>
+                        <label class="form-checkbox">
+                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> Native Hawaiian and Other Pacific Islander
                         </label>
                         <label class="form-checkbox">
@@ -197,7 +201,7 @@
                         </label>
                         <label class="form-checkbox">
                             <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
-                            <i class="form-icon"></i> Some Other Race
+                            <i class="form-icon"></i> Other
                         </label>
                     </div> <!--CARD BODY END-->
                 </div> <!--ACCORDION BODY END-->
