fixed grammatical errors

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -104,11 +104,11 @@
                         <p class="labeltext">Gender Identity (Not Required):</p>
                         <label class="form-radio">
                             <input type="radio" class="formcheckbox" name="sex">
-                            <i class="form-icon"></i> Female
+                            <i class="form-icon"></i> Cis Female
                         </label>
                         <label class="form-radio">
                             <input type="radio" class="formcheckbox" name="sex">
-                            <i class="form-icon"></i> Male
+                            <i class="form-icon"></i> Cis Male
                         </label>
                         <label class="form-radio">
                             <input type="radio" class="formcheckbox" name="sex">
@@ -116,15 +116,11 @@
                         </label>
                         <label class="form-radio">
                             <input type="radio" class="formcheckbox" name="sex">
-                            <i class="form-icon"></i> Transgender-Female
+                            <i class="form-icon"></i> Trans Female
                         </label>
                         <label class="form-radio">
                             <input type="radio" class="formcheckbox" name="sex">
-                            <i class="form-icon"></i> Transgender-Male
-                        </label>
-                        <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sex">
-                            <i class="form-icon"></i> Transgender-Non-Binary
+                            <i class="form-icon"></i> Trans Male
                         </label>
                         <label class="form-radio">
                             <input type="radio" class="formcheckbox" name="sex">
@@ -173,7 +169,7 @@
                         </p>
                         <label class="form-checkbox">
                             <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
-                            <i class="form-icon"></i> American Indian and Alaska Native
+                            <i class="form-icon"></i> American Indian or Alaskan Native
                         </label>
                         <label class="form-checkbox">
                             <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
@@ -193,7 +189,7 @@
                         </label>
                         <label class="form-checkbox">
                             <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
-                            <i class="form-icon"></i> Native Hawaiian and Other Pacific Islander
+                            <i class="form-icon"></i> Native Hawaiian or Other Pacific Islander
                         </label>
                         <label class="form-checkbox">
                             <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
