since MySQL does not support arrays as datatypes, changed checkboxes to radio.

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -103,31 +103,31 @@
                         <!--sex allow null-->
                         <p class="labeltext">Gender Identity (Not Required):</p>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sex">
+                            <input type="radio" class="formradio" name="sex">
                             <i class="form-icon"></i> Cis Female
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sex">
+                            <input type="radio" class="formradio" name="sex">
                             <i class="form-icon"></i> Cis Male
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sex">
+                            <input type="radio" class="formradio" name="sex">
                             <i class="form-icon"></i> Non-Binary
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sex">
+                            <input type="radio" class="formradio" name="sex">
                             <i class="form-icon"></i> Trans Female
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sex">
+                            <input type="radio" class="formradio" name="sex">
                             <i class="form-icon"></i> Trans Male
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sex">
+                            <input type="radio" class="formradio" name="sex">
                             <i class="form-icon"></i> Other
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sex">
+                            <input type="radio" class="formradio" name="sex">
                             <i class="form-icon"></i> Prefer to Not Identify
                         </label>
                         <!--sexual_orientation allow null-->
@@ -137,19 +137,19 @@
                             <i class="form-icon"></i> Asexual
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sexual_orientation">
+                            <input type="radio" class="formradio" name="sexual_orientation">
                             <i class="form-icon"></i> Bisexual
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sexual_orientation">
+                            <input type="radio" class="formradio" name="sexual_orientation">
                             <i class="form-icon"></i> Gay
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sexual_orientation">
+                            <input type="radio" class="formradio" name="sexual_orientation">
                             <i class="form-icon"></i> Heterosexual
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sexual_orientation">
+                            <input type="radio" class="formradio" name="sexual_orientation">
                             <i class="form-icon"></i> Lesbian
                         </label>
                         <label class="form-radio">
@@ -157,46 +157,46 @@
                             <i class="form-icon"></i> Pansexual
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sexual_orientation">
+                            <input type="radio" class="formradio" name="sexual_orientation">
                             <i class="form-icon"></i> Other
                         </label>
                         <label class="form-radio">
-                            <input type="radio" class="formcheckbox" name="sexual_orientation">
+                            <input type="radio" class="formradio" name="sexual_orientation">
                             <i class="form-icon"></i> Prefer to Not Identify
                         </label>
                         <!--ethnicity-->
                         <p class="labeltext">Ethnicity (Please select all that apply, or at least one from the list.):
                         </p>
-                        <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
+                        <label class="form-radio">
+                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> American Indian or Alaskan Native
                         </label>
-                        <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
+                        <label class="form-radio">
+                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> Asian
                         </label>
-                        <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
+                        <label class="form-radio">
+                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> Black or African American
                         </label>
-                        <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
+                        <label class="form-radio">
+                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> Hispanic
                         </label>
-                        <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
+                        <label class="form-radio">
+                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> Middle Eastern or North African
                         </label>
-                        <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
+                        <label class="form-radio">
+                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> Native Hawaiian or Other Pacific Islander
                         </label>
-                        <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
+                        <label class="form-radio">
+                            <input type="radio" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> White or Caucasian
                         </label>
-                        <label class="form-checkbox">
-                            <input type="checkbox" class="formcheckbox" name="ethnicity" onclick="ifCheckedVal()">
+                        <label class="form-radio">
+                            <input type="checkbox" class="formradio" name="ethnicity" onclick="ifCheckedVal()">
                             <i class="form-icon"></i> Other
                         </label>
                     </div> <!--CARD BODY END-->
